# ye-olde-translator

./: Cargo.toml  index.html
src/: lib.rs  main.rs  translate.rs
ui/: config.slint  main.slint
