[package]
name = "shakespearean-english-translator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]  # required for WASM output

[dependencies]
slint = "1"
wasm-bindgen = "0.2"

[build-dependencies]
slint-build = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"   # optimise for size
lto = true